

$Id$
==================  4.0.0-dev ==============

(No Changes)

==================  3.6.0 ==================

New Features
----------------------
* SOLR-1499: Added SolrEntityProcessor that imports data from another Solr core or instance based on a specified query.
             (Lance Norskog, Erik Hatcher, Pulkit Singhal, Ahmet Arslan, Luca Cavanna, Martijn van Groningen)

Changes in Runtime Behavior
----------------------
* SOLR-3142: Imports no longer default optimize to true, instead false. If you want to force all segments to be merged
             into one, you can specify this parameter yourself. NOTE: this can be very expensive operation and usually
             does not make sense for delta-imports.  (Robert MUir)

==================  3.5.0 ==================

Bug Fixes
----------------------
* SOLR-2875: Fix the incorrect url in tika-data-config.xml (Shinichiro Abe via koji)

==================  3.4.0 ==================

Bug Fixes
----------------------
* SOLR-2644: When using threads=2 the default logging is set too high (Bill Bell via shalin)
* SOLR-2492: DIH does not commit if only deletes are processed (James Dyer via shalin)
* SOLR-2186: DataImportHandler's multi-threaded option throws NPE (Lance Norskog, Frank Wesemann, shalin)
* SOLR-2655: DIH multi threaded mode does not resolve attributes correctly (Frank Wesemann, shalin)
* SOLR-2695: Documents are collected in unsynchronized list in multi-threaded debug mode (Michael McCandless, shalin)
* SOLR-2668: DIH multithreaded mode does not rollback on errors from EntityProcessor (Frank Wesemann, shalin)

==================  3.3.0 ==================

* SOLR-2551: Check dataimport.properties for write access (if delta-import is supported
  in DIH configuration) before starting an import (C S, shalin)

==================  3.2.0 ==================

(No Changes)

==================  3.1.0 ==================
Upgrading from Solr 1.4
----------------------

Versions of Major Components
---------------------
